--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,7 @@ add_subdirectory(view)
 add_executable(${PROJECT_NAME}
         main.cpp
 )
+
+target_link_libraries(${PROJECT_NAME} PRIVATE
+        PiAlarm_model
+)
