--- a/src/view/CMakeLists.txt
+++ b/src/view/CMakeLists.txt
@@ -2,3 +2,4 @@ project(PiAlarm_view)
 
 # Include subdirectory for views implementation and manager
 add_subdirectory(manager)
+add_subdirectory(cli)
