Refactor: model: rename weatherData to TemperatureSensorData
TemperatureSensorData is more representative of the contained data

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SOURCES
         Time.cpp
         AlarmData.cpp
         ClockData.cpp
-        WeatherData.cpp
+        TemperatureSensorData.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC
