--- a/src/service/CMakeLists.txt
+++ b/src/service/CMakeLists.txt
@@ -14,4 +14,9 @@ add_library(${PROJECT_NAME} STATIC
         ${SOURCES}
 )
 
+# link external log library
+target_link_libraries(${PROJECT_NAME} PUBLIC
+        spdlog::spdlog
+)
+
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
