Model: add currentWeatherData

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES
         AlarmData.cpp
         ClockData.cpp
         TemperatureSensorData.cpp
+        CurrentWeatherData.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC
