Services: Add WeatherApiService

--- a/src/service/CMakeLists.txt
+++ b/src/service/CMakeLists.txt
@@ -8,15 +8,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SOURCES
         BaseService.cpp
         TimeUpdateService.cpp
+        WeatherApiService.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC
         ${SOURCES}
 )
 
-# link log library
+# link needed project libraries
 target_link_libraries(${PROJECT_NAME} PUBLIC
         PiAlarm_logging
+        PiAlarm_provider
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
