Model: handle multiple alarms
Replaces AlarmData with AlarmsData to support multiple alarms throughout the application. Updates controller, view, and main entry point to use the new AlarmsData model. Refactors AlarmData to Alarm and adapts related logic and interfaces. Adds new files for AlarmsData and updates CMakeLists accordingly.

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -7,7 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(SOURCES
         Time.cpp
-        AlarmData.cpp
+        Alarm.cpp
+        AlarmsData.cpp
         ClockData.cpp
         TemperatureSensorData.cpp
         CurrentWeatherData.cpp
