Model: add AlarmState

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
         Time.cpp
         Alarm.cpp
         AlarmsData.cpp
+        AlarmState.cpp
         ClockData.cpp
         TemperatureSensorData.cpp
         CurrentWeatherData.cpp
