Model: Manager: Add AlarmManager
Introduces the AlarmManager class to manage alarm operations such as snoozing, stopping, and triggering alarms based on current time and configuration.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
         PiAlarm_controller
         PiAlarm_service
         PiAlarm_provider
+        PiAlarm_model_manager
         PiAlarm_model
 )
 
