--- a/src/model/manager/CMakeLists.txt
+++ b/src/model/manager/CMakeLists.txt
@@ -1,20 +1,12 @@
 cmake_minimum_required(VERSION 3.27)
 
-project(PiAlarm_model LANGUAGES CXX)
+project(PiAlarm_model_manager LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(manager)
-
 set(SOURCES
-        Time.cpp
-        Alarm.cpp
-        AlarmsData.cpp
-        AlarmState.cpp
-        ClockData.cpp
-        TemperatureSensorData.cpp
-        CurrentWeatherData.cpp
+        AlarmManager.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC
