Add BASS external library and test integration
Integrated the BASS audio library as an external dependency with platform-specific binaries and headers. Updated CMake configuration to include the external library and added a test project (bassTest.cpp) to verify integration.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 *.app
 *.out
 
+# Allow specific shared libraries in external directory
+!external/**/*.dll
+!external/**/*.so
+
 # Build folders
 release/
 debug/
