--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,11 @@ include_directories(include)
 # Include project dependencies
 include(cmake/Dependencies.cmake)
 
+# Include dependencies not compatible with basic CMake
+add_subdirectory(external)
+
 # Include subdirectories for source
 add_subdirectory(src)
+
+# Include subdirectories for tests
+add_subdirectory(tests)
