--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,16 +17,4 @@ add_executable(${PROJECT_NAME}
 # Link the executable with the necessary libraries
 target_link_libraries(${PROJECT_NAME} bass)
 
-# Copy the BASS runtime library to the output directory
-get_target_property(BASS_RUNTIME_PATH bass IMPORTED_LOCATION)
-
-# Check if the BASS runtime path exists and is valid
-if(EXISTS "${BASS_RUNTIME_PATH}")
-    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${BASS_RUNTIME_PATH}"
-            $<TARGET_FILE_DIR:${PROJECT_NAME}>
-    )
-else()
-    message(WARNING "IMPORTED_LOCATION for `bass` is not set or does not exist: ${BASS_RUNTIME_PATH}")
-endif()
+copy_bass_dll_to_target(${PROJECT_NAME})
