Always include hardware module and restrict to Linux

--- a/src/hardware/CMakeLists.txt
+++ b/src/hardware/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.27)
 
+if(NOT CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    return()
+endif()
+
 project(PiAlarm_hardware LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
