GFX: add Font cache + update Canavs drawText to take shared_ptr of Font

--- a/src/gfx/CMakeLists.txt
+++ b/src/gfx/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
         Canvas.cpp
         SDD1322Buffer.cpp
         TrueTypeFont.cpp
+        TrueTypeFontCache.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC
