--- a/src/view/console/CMakeLists.txt
+++ b/src/view/console/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.27)
 
-project(PiAlarm_view_cli LANGUAGES CXX)
+project(PiAlarm_view_console LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
