--- a/src/view/ssd1322/CMakeLists.txt
+++ b/src/view/ssd1322/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required(VERSION 3.27)
 
-project(PiAlarm_view LANGUAGES CXX)
+project(PiAlarm_view_ssd1322 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Include subdirectory for views implementation and manager
-add_subdirectory(manager)
-add_subdirectory(console)
-add_subdirectory(ssd1322)
-
 set(SOURCES
-        AbstractMainClockView.cpp
+        MainClockView.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC
         ${SOURCES}
+)
+
+target_link_libraries(${PROJECT_NAME} PUBLIC
+        PiAlarm_gfx
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
