--- a/src/gfx/CMakeLists.txt
+++ b/src/gfx/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(SOURCES
         Canvas.cpp
+        Pictogram.cpp
         SDD1322Buffer.cpp
         TrueTypeFont.cpp
         TrueTypeFontCache.cpp
@@ -21,4 +22,5 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(${PROJECT_NAME} PUBLIC
         freetype
         utf8cpp
+        lodepng
 )
