[UNUSED] hardware: add BME280 class
Implemented, tested once, but not used since I found the bug that make me try BME280 after SCD41...
const methods to review

--- a/src/hardware/CMakeLists.txt
+++ b/src/hardware/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SOURCES
         I2C.cpp
         SSD1322.cpp
         SCD41.cpp
+        BME280.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
